<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="yesterday">Yesterday</string>
    <string name="timestamp_now_future">now</string>
    <string name="timestamp_now_past">just now</string>
    <string name="timestamp_tomorrow">tomorrow</string>
    <string name="timestamp_yesterday">yesterday</string>
    <string name="timestamp_recent">recent</string>
    <string name="timestamp_past_hour">past hour</string>
    <string name="timestamp_future">in %s</string>
    <string name="timestamp_past">%s ago</string>
    <string name="phone_call_mute">Mute</string>
    <string name="phone_call_unmute">Unmute</string>
    <string name="phone_call_unknown_caller">Unknown</string>
    <string name="phone_call_incoming">Incoming…</string>
    <string name="phone_call_calling">Calling…</string>
    <string name="phone_call_hanging_up">Hanging up…</string>
    <string name="phone_call_missed_call">Missed call</string>
    <string name="phone_call_failed">Call failed</string>
    <string name="phone_call_reply_menu_display_name">Message</string>
    <string name="phone_call_total_time">%s call</string>
    <string name="phone_call_duration_hours_minutes_seconds">%1$s hr %2$s min %3$s sec</string>
    <string name="phone_call_duration_minutes_seconds">%1$s min %2$s sec</string>
    <string name="phone_call_duration_seconds">%s sec</string>
    <string name="phone_call_in_call">In a phone call</string>
    <string name="phone_call_menu_end">End call</string>
    <string name="phone_call_answer">Answer</string>
    <string name="phone_call_decline">Decline</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="sharing_no_share_targets">Visit g.co/myglass to add friends</string>
    <string name="sharing_menu_share_confirming">Sharing</string>
    <string name="sharing_menu_share_confirmed">Shared</string>
    <string name="sharing_menu_send_confirming">Sending</string>
    <string name="sharing_menu_send_confirmed">Sent</string>
    <string name="sharing_menu_tap_to_annotate">Tap to add caption</string>
    <string name="sharing_menu_ok_glass_or_tap">Tap or say \"OK Glass\" for options</string>
    <string name="qr_scan_tips">Point towards the QR code on your screen</string>
    <string name="low_storage_dialog_message">Low storage</string>
    <string name="full_storage_dialog_message">Storage is full</string>
    <string name="storage_dialog_sub_message">Connect through USB to remove content</string>
    <string name="timeline_menu_delete_auto_backup_tip">This will also delete from Auto Backup</string>
    <string name="timeline_menu_delete_confirming">Deleting</string>
    <string name="timeline_menu_delete_confirmed">Deleted</string>
    <string name="timeline_menu_retry">Retry</string>
    <string name="timeline_menu_pin">Pin</string>
    <string name="timeline_menu_unpin">Unpin</string>
    <string name="timeline_menu_show_recipients">Show recipients</string>
    <string name="timeline_menu_view_website">View website</string>
    <string name="timeline_menu_open">Open</string>
    <string name="timeline_menu_play_audio">Play audio</string>
    <string name="timeline_menu_error_in_a_call_no_call">Already in a call</string>
    <string name="unavailable_in_phone_call">Unavailable while in phone call</string>
    <string name="unavailable_in_video_call">Unavailable while in video call</string>
    <string name="sms_speakable_type">Text message</string>
    <string name="sms_outgoing_speakable_text">%s.</string>
    <string name="sms_incoming_no_body_speakable_text">From: %s.</string>
    <string name="sms_incoming_speakable_text">From: %1$s. Message: %2$s.</string>
    <string name="sms_unknown_sender">Unknown person</string>
    <string name="voice_message_send_retrying">Retrying</string>
    <string name="volume_muted">Mute</string>
    <string name="volume_limit_reached_primary">Consider lowering volume</string>
    <string name="volume_limit_reached_secondary">Possible hearing damage if kept high for long</string>
    <string name="speakable_text_glassware_name_description">Something from %s</string>
    <string name="speakable_text_fallback">Nothing to read aloud</string>
    <string name="error_unknown_tts_error">Something went wrong</string>
    <string name="error_tap_to_try_again">Tap to try again</string>
    <string name="error_tts_network_connectivity">No network connectivity</string>
    <string name="voice_navigation_directions_not_available">Directions not available</string>
    <string name="error_get_my_glass_for_location">Connect to the MyGlass app for GPS service</string>
    <string name="opening_on_phone">Opening on phone</string>
    <string name="opening_on_phone_success">Opened on phone</string>
    <string name="opening_on_phone_failure">Failed to open</string>
    <string name="generic_bluetooth_device_name">Glass %s</string>
    <string name="timeline_delivery_failure_default">Failed to send</string>
    <string name="tap_to_view_options">Tap to view options</string>
    <string name="say_ok_glass">Say \"ok glass\" to view options</string>
    <string name="tap_to_select_menu">Tap to select this option. Swipe for another.</string>
    <string name="tap_to_expand">Tap to expand</string>
    <string name="error_bluetooth_headset_not_active">Bluetooth headset not active</string>
    <string name="error_no_phone_number">No phone number available</string>
    <string name="error_phone_in_use">You are already in a phone call</string>
    <string name="error_tap_connection_settings">Tap to view connectivity status</string>
    <string name="error_edit_focus_contacts">Visit g.co/contacts to edit contacts</string>
    <string name="error_sms_not_supported">Text messaging is not supported</string>
    <string name="error_suggestion_connect_myglass">Connect to MyGlass for Android for text messaging</string>
    <string name="app_name">Glass Voice</string>
    <string name="voice_input_swipe_down_to_cancel">Swipe down to cancel</string>
    <string name="voice_input_swipe_forward_to_view_contacts">Swipe forward to browse contacts</string>
    <string name="voice_input_no_match">"Didn't catch that"</string>
    <string name="voice_input_server_error">Something went wrong</string>
    <string name="voice_input_audio_error">"Didn't catch that"</string>
    <string name="voice_network_connectivity">No network connectivity</string>
    <string name="voice_search_no_answer">No answer for this search</string>
    <string name="no_speakable_phone_contacts">No recent calls and no starred contacts found</string>
    <string name="no_speakable_messaging_contacts">No recent messages and no starred contacts found</string>
    <string name="error_tap_speak_again">Tap to speak again</string>
    <string name="error_no_speech_detected">No speech detected</string>
    <string name="error_no_share_targets">No sharing contacts found</string>
    <string name="error_no_send_targets">No contacts found</string>
    <string name="voice_message_speak_message">Speak your message</string>
    <string name="voice_message_speak_message_or_take_a_photo">"Speak your message 
or take a picture"</string>
    <string name="voice_message_send_confirming">Sending</string>
    <string name="voice_message_send_confirmed">Sent</string>
    <string name="voice_message_send_email_confirming">Sending email</string>
    <string name="voice_message_send_email_confirmed">Sent email</string>
    <string name="voice_message_send_sms_confirming">Sending text</string>
    <string name="voice_message_send_sms_confirmed">Sent text</string>
    <string name="voice_message_send_glassware_confirming">Sending message</string>
    <string name="voice_message_send_glassware_confirmed">Sent message</string>
    <string name="voice_message_swipe_to_email">Swipe to use Gmail</string>
    <string name="musicplayer_menu_play">Play</string>
    <string name="musicplayer_menu_pause">Pause</string>
    <string name="musicplayer_menu_next">Next</string>
    <string name="musicplayer_menu_previous">Previous</string>
    <string name="musicplayer_menu_radio">Radio</string>
    <string name="musicplayer_menu_instant_mix">Instant Mix</string>
    <string name="musicplayer_menu_stop">Stop</string>
    <string name="musicplayer_voice_menu_play_music">Play music</string>
    <string name="musicplayer_voice_menu_pause_music">Pause music</string>
    <string name="musicplayer_voice_menu_next_track">Next track</string>
    <string name="musicplayer_voice_menu_previous_track">Previous track</string>
    <string name="musicplayer_voice_menu_start_radio">Start radio</string>
    <string name="musicplayer_voice_menu_start_instant_mix">Start instant mix</string>
    <string name="musicplayer_voice_menu_exit_music">Exit music</string>
</resources>